--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "defaultConnection": "Data Source=devopsgauditestportalapi-server.database.windows.net,1433;Initial Catalog=devopsgauditestportalapi-database;User ID=devopsgauditestportalapi-server-admin;Password=VRE75B551NCIXZY0$"
   }
-} 
+}
